@@ -1,3 +1,8 @@
+<b>Version 1.11:</b><br/><br/>
+    &#8226; Fixes for duplicates - If it does happen, go to advanced settings then clean timeline<br/>
+    &#8226; More changes/fixes for the toast bar<br/>
+<br/><br/>
+
 <b>Version 1.10 Beta 3:</b><br/><br/>
     &#8226; Much better refreshing of mentions from the main timeline<br/>
     &#8226; "To first" button added in the action bar if you disable the toast<br/>
